# FVM-DG-Euler

./: .gitignore
hyp_sys_1d/: CMakeLists.txt  README.md  config.json  plot_burgers.py  plot_euler.py
hyp_sys_1d/config_files/: benchmark.json  benchmark_dg.json  burgers_dg_rarefaction.json  burgers_dg_shock.json  burgers_fvm_rarefaction.json  euler_dg_sod_shock_tube.json  euler_fvm_sod_shock_tube.json  euler_fvm_vacuum.json  plot.py  sw_fvm_dam_break.json  sw_fvm_vacuum.json
hyp_sys_1d/include/ancse/: boundary_condition.hpp  cfl_condition.hpp  config.hpp  dg_handler.hpp  dg_limiting.hpp  dg_rate_of_change.hpp  fvm_rate_of_change.hpp  grid.hpp  includes.hpp  limiters.hpp  model.hpp  numerical_flux.hpp  polynomial_basis.hpp  rate_of_change.hpp  reconstruction.hpp  runge_kutta.hpp  simulation_time.hpp  snapshot_writer.hpp  time_loop.hpp
hyp_sys_1d/output/: euler_dg0_sod_shock_tube-0000.json
hyp_sys_1d/output/fvm/sod_shock_tube/: euler_hllc_minmod_prim0000.json
hyp_sys_1d/src/: CMakeLists.txt  dg_burgers.cpp  dg_euler.cpp  fvm_burgers.cpp  fvm_euler.cpp  fvm_shallow_water.cpp
hyp_sys_1d/src/ancse/: CMakeLists.txt  boundary_condition.cpp  cfl_condition.cpp  config.cpp  dg_handler.cpp  dg_limiting.cpp  dg_rate_of_change.cpp  fvm_rate_of_change.cpp  grid.cpp  model.cpp  polynomial_basis.cpp  runge_kutta.cpp  simulation_time.cpp  snapshot_writer.cpp  time_loop.cpp
hyp_sys_1d/tests/: CMakeLists.txt  test_boundary_condition.cpp  test_cfl_condition.cpp  test_dg_handler.cpp  test_grid.cpp  test_model.cpp  test_numerical_flux.cpp  test_polynomial_basis.cpp  test_reconstruction.cpp
unstructured_euler/: .clang-format  CMakeLists.txt  README.md  cfl_condition.hpp  compute_convergence.py  euler.hpp  gradient.hpp  hllc.hpp  mesh.hpp  naca_airfoil.cpp  numerical_flux.hpp  plot_on_mesh.py  slope_limiter.hpp  solve_euler.hpp  types.hpp  unit_test.cpp  vortex.cpp  writer.hpp
unstructured_euler/cmake/: FindOpenMP.cmake  GetEigen.cmake  GetFMT.cmake  GetGTest.cmake  GetIGL.cmake  GetJSON.cmake  fast_debug.cmake  gperftools.cmake
unstructured_euler/data/mesh/: naca.mesh  square_0.mesh  square_1.mesh  square_2.mesh  square_3.mesh  square_4.mesh  square_5.mesh  square_6.mesh  square_tiny.mesh
